--- a/styles-team.css
+++ b/styles-team.css
@@ -147,6 +147,15 @@ body {
     margin-left: 70px;
 	}
 }
+
+/*Remove this if you want to get pictures back to small form*/
+@media (min-width: 1200px) {
+	#photo-container {
+		width: 145px;
+		height: 165px;
+	}
+}
+
 @media (max-width: 575px) {
 	.card {
 		margin-top: 20px;
