--- a/styles-team.css
+++ b/styles-team.css
@@ -3,7 +3,7 @@
 }
 #header{
 	text-align: center;
-	background-image: url(cloud.jpg);
+	background-image: url(image/cloud.jpg);
 	height: 60px;
 }
 #header > span {
